1. Update dependencies 2. Remove unnecessary kapt settings