@@ -1,18 +1,18 @@
 buildscript {
     ext {
-        kotlinVer = '1.2.41'
-        springBootVer = '2.0.2.RELEASE'
-        kotlinLoggingVer = '1.5.4'
-        reactorCoreVer = '3.1.7.RELEASE'
+        kotlinVer = '1.2.60'
+        springBootVer = '2.0.4.RELEASE'
+        kotlinLoggingVer = '1.5.9'
+        reactorCoreVer = '3.1.8.RELEASE'
         javaxAnnotationApiVer = '1.3.2'
         javaxTransactionApiVer = '1.3'
 
-        testContainersVer = '1.7.2'
+        testContainersVer = '1.8.3'
         jfairyVer = '0.5.9'
 
         propdepsPluginVer = '0.0.10.RELEASE'
-        versionPluginVer = '0.17.0'
-        dockerPluginVer = '0.19.2'
+        versionPluginVer = '0.20.0'
+        dockerPluginVer = '0.20.1'
     }
 
     repositories {
@@ -66,8 +66,9 @@ dependencies {
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
-    testCompile "org.junit.jupiter:junit-jupiter-api"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit5:$kotlinVer"
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 
     testCompile "io.projectreactor:reactor-test:$reactorCoreVer"
 
@@ -94,20 +95,6 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     }
 }
 
-kapt {
-    useBuildCache = true
-    javacOptions {
-        option("--add-modules", "java.xml.ws.annotation")
-    }
-}
-
-idea {
-    module {
-        sourceDirs += files('build/generated/source/kapt/main', 'build/generated/source/kaptKotlin/main')
-        generatedSourceDirs += files('build/generated/source/kapt/main', 'build/generated/source/kaptKotlin/main')
-    }
-}
-
 bootJar {
     mustRunAfter tasks.clean
     mainClassName = 'app.AppKt'
@@ -119,13 +106,14 @@ tasks.withType(Test) {
 }
 
 test {
-    useJUnitPlatform {
-        includeEngines 'junit-jupiter'
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
     }
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+    gradleVersion = '4.9'
     distributionType = Wrapper.DistributionType.ALL
 }
 
